package com.devsenior.vcar.model;

public class Copia {
    private Integer identificador;
    private Libro libro;
    private EstadoCopia estado;
    
    public Integer getIdentificador() {
        return identificador;
    }
    public void setIdentificador(Integer identificador) {
        this.identificador = identificador;
    }
    public Libro getLibro() {
        return libro;
    }
    public void setLibro(Libro libro) {
        this.libro = libro;
    }
    public EstadoCopia getEstado() {
        return estado;
    }
    public void setEstado(EstadoCopia estado) {
        this.estado = estado;
    }

    
}
