package com.devsenior.vcar.model;

public enum EstadoCopia {
    BIBLIOTECA,
    PRESTADA,
    CON_RETRASO,
    EN_REPARACION;
}
