package com.devsenior.vcar.model;

import java.time.LocalDate;

public class Lector {
     private String nombre;
     private LocalDate fechaMulta;
     private Prestamo[] prestamos;

        // Constructor
     public String getNombre() {
         return nombre;
     }
     public void setNombre(String nombre) {
         this.nombre = nombre;
     }
     public LocalDate getFechaMulta() {
         return fechaMulta;
     }
     public void setFechaMulta(LocalDate fechaMulta) {
         this.fechaMulta = fechaMulta;
     }
     public Prestamo[] getPrestamos() {
         return prestamos;
     }
     public void setPrestamos(Prestamo[] prestamos) {
         this.prestamos = prestamos;
     }

     

}
