package com.devsenior.vcar.model;

import java.time.LocalDate;

public class Prestamo {
    private LocalDate fechaPrestamo;
    private Lector lector;
    private Copia copia;

    // Constructor
    public LocalDate getFechaPrestamo() {
        return fechaPrestamo;
    }
    public void setFechaPrestamo(LocalDate fechaPrestamo) {
        this.fechaPrestamo = fechaPrestamo;
    }
    public Lector getLector() {
        return lector;
    }
    public void setLector(Lector lector) {
        this.lector = lector;
    }
    public Copia getCopia() {
        return copia;
    }
    public void setCopia(Copia copia) {
        this.copia = copia;
    }

    
}
