package com.devsenior.vcar.model;

public enum TipoLibro {
    NOVELA,
    TEATRO,
    POESIA,
    ENSAYO;
    
}
