@startuml Modelo de datos de Biblioteca


class Libro {
    - String nombre
    - String editorial
    - Integer año
}

enum TipoLibro{
    NOVELA
    TEATRO
    POESIA
    ENSAYO
}

class Autor{
    - String nombre
    - String nacionalidad
    - Date fechaDeNacimiento
}

class Copia{
    - Integer identificador

}

enum EstadoCopia {
    BIBLIOTECA 
    PRESTADA 
    CON_RETRASO
    EN_REPARACION
}

class Lector {   
    - String nombre
    - Date  fechaMulta
}

class Prestamo {
    - Date fechaPrestamo
}


Libro -left-> TipoLibro : tipo
Autor "1" -- "1..*" Libro  
Copia -right-> EstadoCopia : estado
Libro *-right- Copia
Lector -- "0..3" Copia : prestamo
(Lector, Copia) -- Prestamo

@enduml